--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,21 +1,20 @@
 // 1. buildscript comes FIRST
 buildscript {
-    ext.kotlin_version = '2.1.0'  
+    ext.kotlin_version = '2.1.0'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
+        classpath 'com.android.tools.build:gradle:8.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.android.tools.build:gradle:7.3.0'
-        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.gms:google-services:4.4.1'
     }
 }
 
-
 // 2. Then plugins block
 plugins {
-    id("com.google.gms.google-services") version "4.4.2" apply false  // Correct plugin version
+    id("com.google.gms.google-services") version "4.4.1" apply false
 }
 
 // 3. Then allprojects block
